# hexing

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: layout.md  serde.md
examples/game-of-life/: Cargo.toml  README.md
examples/game-of-life/src/: main.rs
src/: layout.rs  lib.rs  utils.rs
