[package]
name = "hexing"
version = "0.2.0"
edition = "2021"
description = "A basic Rust library to manipulate hexagonal grids."
repository = "https://github.com/CoCoSol007/hexing"
authors = ["CoCoSol"]
license = "GPL-3.0"
readme = "README.md"
documentation  = "https://cocosol.fr/blog/hexing"
keywords = [
  "bestagon",
  "hexagon",
  "hexagonal",
  "math",
  "grid",
]
categories = [
  "algorithms",
  "mathematics",
  "data-structures",
  "hexagonal",
]
exclude = [
    ".github/*",
    "rustfmt.toml",
    ".gitignore",
    "logo.png",
]

[features]
serde = ["dep:serde"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = { level = "warn", priority = -1 }

[dependencies]
lerp = "0.5.0"
paste = "1.0.15"
serde = {version = "1.0.207", optional = true, features = ["derive"]}
