[package]
name = "hexing"
version = "0.2.1"
edition = "2021"
description = "A basic Rust library to manipulate hexagonal grids."
repository = "https://github.com/CoCoSol007/hexing"
authors = ["CoCoSol"]
license = "GPL-3.0"
readme = "README.md"
documentation  = "https://cocosol.fr/blog/hexing"
keywords = [
  "bestagon",
  "hexagon",
  "hexagonal",
  "math",
  "grid",
]
categories = [
  "algorithms",
  "mathematics",
  "data-structures",
]
exclude = [
    ".github/*",
    ".docs/*",
    "rustfmt.toml",
    ".gitignore",
    "logo.png",
    "LICENSE",
]

[features]
serde = ["dep:serde"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = { level = "warn", priority = -1 }

[dependencies]
noise = {version = "0.9.0", optional = true}
paste = "1.0.15"
priority-queue = "2.1.0"
serde = {version = "1.0.208", optional = true, features = ["derive"]}
